--- a/css/main.scss
+++ b/css/main.scss
@@ -87,3 +87,7 @@ div h4{
 	margin: 15px 5px 5px;
 	font-size: inherit;
 }
+
+.hidden{
+	display: none;
+}
